# LAT-Lab

./: .gitignore  CONTRIBUTORS.md  CONTRIBUTORS_EN.md  CONTRIBUTOR_LICENSE_AGREEMENT.md  CONTRIBUTOR_LICENSE_AGREEMENT_EN.md  LICENSE-MAPPING.md  README-CLEANING.md  README.md  README_EN.md  SECURITY.md  SECURITY_CONTRIBUTORS.md  deploy.ps1  deploy.sh  docker-compose.yml  docker.env.example  env.example  env.traditional.example  instruct.md  marketplace_config.json  start_server.py
Docs/: CHANGELOG.md  FAQ.md  (+25 more)
backend/: .dockerignore  .gitignore  Dockerfile  README.md  add_admin.sql  alembic.ini  create_admin_user.py  env.example  init_plugin_examples.py  init_plugin_marketplace.py  pyproject.toml  requirements.txt  run.py  run_migrations.py  start.sh  start_server.py
backend/app/: init_examples.py  main.py
backend/app/api/: article.py  auth.py  category.py  comment.py  plugin.py  plugin.py.bak  rss.py  tag.py  upload.py  user.py
backend/app/core/: config.py  deps.py  email.py  security.py
backend/app/crud/: article.py  category.py  comment.py  plugin.py  user.py
backend/app/models/: __init__.py  article.py  category.py  plugin.py  tag.py  user.py
backend/app/plugin_examples/: README.md  article_stats.py  hello_world.py  image_widget.py  latlab_utils.py  openrouter_llm.py  simple_counter.py
backend/app/schemas/: user.py
backend/data/: marketplace_config.json
backend/migrations/: README  env.py
backend/migrations/versions/: 20250101000001_添加配置表.py  20250812000505A1_初始建表.py  20250813003000A1_添加配置表.py  20251110090000_add_must_change_password.py  30b7fef8bade_add_likes_count_to_articles.py  add_article_likes.py  add_avatar_and_bio_to_users.py  add_email_verification.py  c12271f22ba5_add_article_status_and_visibility.py  c7733d004267_initial_migration.py  dc971a6c7670_添加文章审核字段.py  plugin_marketplace_upgrade.py
backend/plugins/: .gitkeep
backend/scripts/: README.md  copy_config.py  create_user.py  debug_paths.py  fix_imports.py  init-db-mysql.py  init-db-mysql.sql  init-db-sqlite.py  init-db.sql  init_db.py  run_migrations.py  setup_env.py  simple_test.py  test_api.py  test_api_curl.py  test_git_source.py  test_login_user.py  test_marketplace.py  test_security_fixes.py
backend/setup_tools/: README.md  add_admin.sql  create_admin_user.py
backend/src/lat_lab/: main.py  marketplace_config.json
backend/src/lat_lab/api/: __init__.py  admin.py  article.py  auth.py  category.py  comment.py  marketplace.py  plugin.py  rss.py  tag.py  upload.py  user.py
backend/src/lat_lab/core/: config.py  database.py  deps.py  email.py  rate_limiter.py  security.py
backend/src/lat_lab/crud/: article.py  category.py  comment.py  plugin.py  user.py
backend/uploads/avatars/: .gitkeep
(+111 files in other folders)
