[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lat_lab"
version = "0.3.1"
description = "LAT-LAB 博客平台"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "Proprietary"}
authors = [
    {name = "Dawn_ARC", email = "contact@luminarc.tech"},
]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "sqlalchemy>=2.0.35",
    "alembic>=1.14.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "email-validator>=2.2.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.12",
    "python-dotenv>=1.0.1",
    "requests>=2.32.0",
    "pymysql>=1.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "black>=24.8.0",
    "isort>=5.13.0",
    "mypy>=1.11.0",
    "flake8>=7.0.0",
    "pre-commit>=3.8.0",
]

[project.scripts]
lat-lab = "lat_lab.main:run_app"

[tool.hatch.build.targets.wheel]
packages = ["src/lat_lab"]

[tool.black]
line-length = 88
target-version = ["py38"]

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"